deploy/kubernetes/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app

---
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: sample-app
  labels:
    app: django-mysite
    component: mysql
spec:
  ports:
    - name: 3306-tcp
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: django-mysite
    component: mysql
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: sample-app
  labels:
    app: django-mysite
    component: backend
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: django-mysite
    component: backend
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: sample-app
  labels:
    app: django-mysite
    component: frontend
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: django-mysite
    component: frontend
  type: ClusterIP

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  namespace: sample-app
  labels:
    app: django-mysite
    component: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-mysite
      component: mysql
  template:
    metadata:
      labels:
        app: django-mysite
        component: mysql
    spec:
      volumes:
        - name: mysql-pv-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      containers:
        - name: mysql
          image: mysql:5.6
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-pv-storage
          ports:
            - containerPort: 3306
              protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: sample-app
  labels:
    app: django-mysite
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-mysite
      component: backend
  template:
    metadata:
      labels:
        app: django-mysite
        component: backend
    spec:
      containers:
        - name: backend
          image: quay.io/jkandasa/django-blog-backend:master
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: sample-app
  labels:
    app: django-mysite
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-mysite
      component: frontend
  template:
    metadata:
      labels:
        app: django-mysite
        component: frontend
    spec:
      containers:
        - name: frontend
          image: quay.io/jkandasa/django-blog-frontend:master
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
