deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-frontend
  namespace: sample-app
  labels:
    app: django-mysite
    component: frontend
spec:
  rules:
  - host: "frontend.example.com" # update host details
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 8080
