deploy/kubernetes/openshift-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: sample-app
  labels:
    app: django-mysite
    component: frontend
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080-tcp
